[gd_scene load_steps=12 format=3 uid="uid://c30gtqlkrth85"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1_mr61o"]
[ext_resource type="Texture2D" uid="uid://cwdo64ylusvjf" path="res://Sprites/sword.png" id="2_fofk2"]
[ext_resource type="AudioStream" uid="uid://42yp3il8p86a" path="res://Audio/WHOOSH_Air_Very_Fast_RR2_mono.wav" id="3_57fgf"]

[sub_resource type="Environment" id="Environment_wuqtq"]
ssao_enabled = true

[sub_resource type="Animation" id="Animation_i5l0a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite3D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.10021, -0.782941, -0.229252)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite3D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.54348, -0.065041, -0.575877)]
}

[sub_resource type="Animation" id="Animation_glytc"]
resource_name = "attack"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.12, 0.15, 0.18, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(-0.10021, -0.782941, -0.229252), Vector3(-0.0331613, -1.00007, -0.93026), Vector3(-0.296706, -1.11527, -0.178024), Vector3(-0.431096, -0.771436, 0.335103), Vector3(-0.10021, -0.782941, -0.229252)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.12, 0.15, 0.18, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.54348, -0.065041, -0.575877), Vector3(0.543, 0.198, -0.514), Vector3(0.253, 0.097, -0.665), Vector3(-0.049, -0.077, -0.59), Vector3(0.54348, -0.065041, -0.575877)]
}

[sub_resource type="Animation" id="Animation_6dngg"]
resource_name = "head_bob"
length = 0.3
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 2.24323, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.04, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_smdo2"]
resource_name = "head_tilt_left"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 0.5, 25),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.0436332, -0.00349066), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_335y0"]
resource_name = "head_tilt_right"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 0.5, 25),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.0436332, 0.00349066), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_06l7j"]
resource_name = "take_damage"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(0.233, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0.075), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(0.233, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.101229, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ylb84"]
_data = {
"RESET": SubResource("Animation_i5l0a"),
"attack": SubResource("Animation_glytc"),
"head_bob": SubResource("Animation_6dngg"),
"head_tilt_left": SubResource("Animation_smdo2"),
"head_tilt_right": SubResource("Animation_335y0"),
"take_damage": SubResource("Animation_06l7j")
}

[node name="Player" type="Node3D"]
script = ExtResource("1_mr61o")

[node name="Camera3D" type="Camera3D" parent="."]
environment = SubResource("Environment_wuqtq")

[node name="RayFront" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, -2.9)

[node name="RayBack" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, 2.5)

[node name="RayRight" type="RayCast3D" parent="."]
target_position = Vector3(2.5, 0, 0)

[node name="RayLeft" type="RayCast3D" parent="."]
target_position = Vector3(-2.5, 0, 0)

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.05049, 0)
shadow_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ylb84")
}

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(0.431527, 0.147075, -0.44917, -0.14471, 0.620129, 0.0640271, 0.449938, 0.0583906, 0.451383, 0.54348, -0.065041, -0.575877)
texture = ExtResource("2_fofk2")

[node name="AudioListener3D" type="AudioListener3D" parent="."]

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_57fgf")
